# learn-korean-pos

./: LICENSE  README.md  learn-korean-pos.ipynb  pyproject.toml
